# adt-mcp

./: .gitignore  .mcp.json  README.md  diag_create.py  diag_create2.py  diag_create3.py  diag_create4.py  diag_create5.py  diag_create6.py  diag_doma.py  diag_intf.py  diag_rapfull.py  pyproject.toml  requirements.txt  run.bat  systems.example.json  verify_create_all.py
.claude/skills/sap-abap-adt/: SKILL.md
docs/: adt-mcp-overview.md
docs/superpowers/plans/: 2026-06-25-clone-package-tool.md
docs/superpowers/specs/: 2026-06-21-deploy-adt-mcp-azure-vps-design.md  2026-06-25-clone-package-tool-design.md
src/adt_mcp/: __init__.py  __main__.py  adt_client.py  cookie_refresh.py  registry.py  server.py
tests/: test_adt_client.py  test_clone.py  test_main.py  test_package.py  test_registry.py  test_server.py  test_web.py  test_write.py
web/: index.html
