[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adt-mcp"
version = "0.1.0"
description = "Multi-system MCP server for SAP ABAP source retrieval via ADT"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2", "httpx>=0.27"]

[project.optional-dependencies]
refresh = ["playwright>=1.40"]

[project.scripts]
adt-mcp = "adt_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
